lab-09/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pozos-api
  name: pozos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pozos-api
  template:
    metadata:
      labels:
        app: pozos-api
    spec:
      containers:
      - image: eazytrainingfr/pozos-api:0.1
        name: pozos-api
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: student-list
          mountPath: /data

      volumes:
      - name: student-list
        emptyDir: {}
