lab-09/pozos-webesite-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pozos-website-service
spec:
  type: NodePort
  selector:
    app: pozos-website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30008
