lab-09/svc-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ExternalName
  externalName: eazytraining.fr
